[Media Controls] Only keep mouse events in node directly on play button

This CL makes further updates to the MediaControlOverlayPlayButton's
KeepEventInNode calculation to only keep mouse events in node if they
are on the internal play button itself. This fixes an issue on YouTube
Creator's custom blurring tool which prevents the user from creating
any blurs.

Bug: 864739
Change-Id: I5106ba061c4bcce3594b84e0615ea45352db0f04
Reviewed-on: https://chromium-review.googlesource.com/1141097
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576233}
Former-commit-id: daa2e3c8f7425c31c21d95f6632310290478acfd