third_party/blink/renderer/modules/media_controls/elements/media_control_overlay_play_button_element.cc
@@ -268,9 +268,15 @@ void MediaControlOverlayPlayButtonElement::DefaultEventHandler(Event* event) {
 }
 
 bool MediaControlOverlayPlayButtonElement::KeepEventInNode(Event* event) {
-  return ShouldCausePlayPause(event) ||
-         (MediaControlElementsHelper::IsUserInteractionEvent(event) &&
-          event->type() != EventTypeNames::click);
+  // We only care about user interaction events.
+  if (!MediaControlElementsHelper::IsUserInteractionEvent(event))
+    return false;
+
+  // For mouse events, only keep in node if they're on the internal button.
+  if (event->IsMouseEvent())
+    return IsMouseEventOnInternalButton(ToMouseEvent(event));
+
+  return true;
 }
 
 bool MediaControlOverlayPlayButtonElement::ShouldCausePlayPause(
@@ -283,15 +289,17 @@ bool MediaControlOverlayPlayButtonElement::ShouldCausePlayPause(
   if (!MediaControlsImpl::IsModern() || !event->IsMouseEvent())
     return true;
 
-  // If the event doesn't have position data we should just default to
-  // play/pause.
   // TODO(beccahughes): Move to PointerEvent.
-  MouseEvent* mouse_event = ToMouseEvent(event);
+  return IsMouseEventOnInternalButton(ToMouseEvent(event));
+}
+
+bool MediaControlOverlayPlayButtonElement::IsMouseEventOnInternalButton(
+    MouseEvent* mouse_event) const {
+  // If no position data available, default to yes.
   if (!mouse_event->HasPosition())
     return true;
 
-  // If the click happened on the internal button or a margin around it then
-  // we should play/pause.
+  // Find the zoom-adjusted internal button bounding box.
   DOMRect* box = internal_button_->getBoundingClientRect();
   float zoom = ComputedStyleRef().EffectiveZoom() /
                GetDocument().GetLayoutView()->ZoomFactor();
@@ -299,6 +307,8 @@ bool MediaControlOverlayPlayButtonElement::ShouldCausePlayPause(
   box->setY(box->y() * zoom);
   box->setWidth(box->width() * zoom);
   box->setHeight(box->height() * zoom);
+
+  // Check the button and a margin around it.
   return IsPointInRect(*box, kInnerButtonTouchPaddingSize,
                        mouse_event->clientX(), mouse_event->clientY());
 }
